--- a/App.css
+++ b/App.css
@@ -49,14 +49,8 @@ a{
   border-radius: 4px;
 } */
 
-/* Header.css */
-/* Header.css */
-/* Header.css */
-
-
-/* MainContent.css */
 .main-content {
-  padding-top: 80px; /* Add padding to create space for the fixed header */
+  padding-top: 80px; 
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -70,7 +64,7 @@ a{
   border-radius: 8px;
   text-align: center;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease-in-out; /* Adding the transition */
+  transition: transform 0.3s ease-in-out;
 }
 
 .service-container a {
@@ -99,13 +93,13 @@ a{
   font-size: 16px;
   color: #555;
 }
-/* MainContent.css */
+
 .main-content {
-  padding-top: 80px; /* Add padding to create space for the fixed header */
+  padding-top: 80px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: #f2f2f2; /* Set background color for MainContent */
+  background-color: #f2f2f2;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -117,13 +111,12 @@ a{
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   position: relative;
   overflow: hidden;
-  background-color: #fff; /* Set background color for service container */
-  transition: transform 0.3s ease; /* Add transition for zoom effect */
-}
+  background-color: #fff;
+  transition: transform 0.3s ease;
 
 .shop-image {
   width: 100%;
-  border-radius: 0; /* Remove rounded corners for sharp edges */
+  border-radius: 0;
 }
 
 .shop-name {
@@ -137,7 +130,7 @@ a{
   color: #555;
 }
 
-/* Add styles for shop name and tagline position */
+
 .shop-name,
 .tagline {
   position: absolute;
@@ -147,19 +140,15 @@ a{
   width: 100%;
 }
 
-/* Add styles for service container hover effect */
+
 .service-container:hover {
-  transform: scale(1.1); /* Zoom in by 10% on hover */
-  cursor: pointer; /* Show pointer cursor on hover */
-  background-color: #aeb7c0; /* Change background color on hover */
-  color: #fff; /* Change text color on hover */
+  transform: scale(1.1); 
+  cursor: pointer;
+  background-color: #aeb7c0;
+  color: #fff;
 }
 
 
-/* Optional: Add styles for the service container links on hover */
-
-
-/* Styles for service containers go here */
 
 .service-title {
   text-align: center;
@@ -183,7 +172,7 @@ a{
   font-size: 30px;
   padding-top: 10px;
 }
-/* Footer.css */
+
 .footer {
   display: flex;
   justify-content: space-between;
@@ -216,6 +205,6 @@ a{
   text-decoration: underline;
 }
 .footer-right a:hover {
-  color: #ff9800; /* Change color on hovering */
-  text-decoration: none; /* Add underline on hovering */
+  color: #ff9800;
+  text-decoration: none;
 }
